--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
           href="/src/assets/svgs/favicon.svg"
           type="image/svg">
   </head>
-  <body class="font-montserrat antialiased bg-gray-100 relative">
+  <body>
     <div id="app" class="flex h-screen"></div>
+
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
