--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </head>
   <body>
     <div id="app" class="flex h-screen"></div>
-
-
+    <div id="toasts"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
